<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pizzza_xxx" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dip" >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title..."
                android:textSize="32dip" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description..."
                android:textSize="20dip" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prices"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/lbl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_price1" />

            <TextView
                android:id="@+id/txt_price1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="5dip"
                android:text="$ 000.00" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/lbl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_price2" />

            <TextView
                android:id="@+id/txt_price2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="5dip"
                android:text="$ 000.00" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/lbl3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_price3" />

            <TextView
                android:id="@+id/txt_price3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="5dip"
                android:text="$ 000.00" />
        </TableRow>
    </TableLayout>

    <CheckBox
        android:id="@+id/chkFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_like_it"
        android:textSize="20dip" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/ready" />

</LinearLayout>